# token-lists

./: .gitattributes  .gitignore  README.md  biome.json  flake.nix  justfile  tokenlist.schema.json  tokens.csv
.github/workflows/: check-tokens.yml  checks.yml  pages.yml  upload-to-dune.yml
data/: tokenlist.schema.json
data/arbitrum.42161/: tokenlist.json
data/arbitrum.421614/: legacy-tokenlist.json  tokenlist.json
data/babylon.babylon-testnet-1/: tokenlist.json
data/babylon.babylon-testnet-5/: tokenlist.json
data/babylon.bbn-1/: tokenlist.json
data/base.8453/: tokenlist.json
data/base.84532/: tokenlist.json
data/berachain.80084/: legacy-tokenlist.json  tokenlist.json
data/berachain.80094/: legacy-tokenlist.json
data/bob.60808/: tokenlist.json
data/bob.808813/: tokenlist.json
data/bsc.56/: tokenlist.json
data/bsc.97/: tokenlist.json
data/corn.21000000/: tokenlist.json
data/corn.21000001/: tokenlist.json
data/ethereum.1/: legacy-tokenlist.json  tokenlist.json
data/holesky.17000/: tokenlist.json
data/hoodi.560048/: tokenlist.json
data/neutron.neutron-1/: tokenlist.json
data/neutron.pion-1/: tokenlist.json
data/optimism.10/: tokenlist.json
data/optimism.11155420/: tokenlist.json
data/osmosis.osmo-test-5/: legacy-tokenlist.json  tokenlist.json
data/osmosis.osmosis-1/: tokenlist.json
data/scroll.534351/: legacy-tokenlist.json  tokenlist.json
scripts/: generate-csv.py  generate-one-json.sh
scripts/validate-tokens/: Cargo.toml  tokenlist_config.json
scripts/validate-tokens/src/: main.rs
union-testnet-8/: tokenlist.json
(+18 files in other folders)
