[package]
name = "validate-tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "v0.6.3", features = ["rpc-client", "providers", "transport-http", "contract", "sol-types"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
clap = { version = "4.5.39", features = ["derive"] }
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
